<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/my_nanodegree_app"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/title_button_margin" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer"
        android:id="@+id/bt_spotify_streamer"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:onClick="launchSpotifyStreamer" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/score_app"
        android:id="@+id/bt_score_app"
        android:layout_below="@+id/bt_spotify_streamer"
        android:layout_centerHorizontal="true"
        android:onClick="launchScoreApp" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:id="@+id/bt_library_app"
        android:layout_below="@+id/bt_score_app"
        android:layout_centerHorizontal="true"
        android:onClick="launchLibraryApp" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:id="@+id/bt_build_it_bigger"
        android:layout_below="@+id/bt_library_app"
        android:layout_centerHorizontal="true"
        android:onClick="launchBuildItBigger" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader"
        android:id="@+id/bt_xyz_reader"
        android:layout_below="@+id/bt_build_it_bigger"
        android:layout_centerHorizontal="true"
        android:onClick="launchXyzReader" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/bt_capstone"
        android:layout_below="@+id/bt_xyz_reader"
        android:layout_centerHorizontal="true"
        android:onClick="launchCapstone" />
</RelativeLayout>
